# aict1

./: .gitignore  .wsync.config.js  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
.hermes/plans/: 2025-05-02_200858-update-app-icon.md  2026-05-02_143340-remove-esc-hide-window.md  2026-05-02_152715-clipboard-double-ctrl-c-translate.md  2026-05-02_183000-autostart-silent-start.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: QueryResult.tsx  SearchBox.tsx
src/pages/: Favorites.tsx  Settings.tsx
src/stores/: appStore.ts  favoritesStore.ts  historyStore.ts  settingsStore.ts
src/types/: index.ts  tauri.d.ts
src/utils/: indexedDB.ts  tauri.ts
